--- a/docs/templates/searchbox.html
+++ b/docs/templates/searchbox.html
@@ -1,4 +1,5 @@
 <ul>
     <li><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.mac" style="color: #fc6aae; font-size: xx-large">Download unettest</a></li>
     <li><a href="https://unettest.s3.us-east-2.amazonaws.com/mac-sha256" style="font-size: large">SHA-256!</a></li>
+    <li><a href="https://github.com/nypublicradio/unettest" style="font-size: large">Fork me on Github 😎</a></li>
 </ul>
