--- a/docs/templates/searchbox.html
+++ b/docs/templates/searchbox.html
@@ -1,5 +1,9 @@
 <ul>
-    <li><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.mac" style="color: #fc6aae; font-size: xx-large">Download unettest</a></li>
-    <li><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.mac-sha256" style="font-size: large">SHA-256!</a></li>
+    <li style=" font-size: large">Download unettest:</li>
+    <li style="padding-top: 3px;"><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.mac" style="color: #fc6aae;font-size: x-large;">For Mac!</a></li>
+    <li><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.mac-sha256" style="font-size: large">SHA-256</a></li>
+    <li style="padding-top: 3px;"><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.nix" style="color: #fc6aae;font-size: x-large;">For Linux!</a></li>
+    <li><a href="https://unettest.s3.us-east-2.amazonaws.com/unettest.nix-sha256" style="font-size: large">SHA-256</a></li>
+    <br>
     <li><a href="https://github.com/nypublicradio/unettest" style="font-size: large">Find me on Github 😎</a></li>
 </ul>
